# hero-app

./: Dockerfile  README.md  catalog-info.yaml  compose.yaml  docker-env  docker-env-entrypoint  docker-env-entrypoint-dev  docker-env-entrypoint.sh  example.env  pyproject.toml
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: deploy-image.yaml  main.yml
app/: __init__.py
app/core/: db.py
app/quotes/: api.py  crud.py  dependencies.py  examples.py  models.py
app/quotes/tests/: tests.py
app/quotes/tests/data/: data.json
app/router/api_v1/: endpoints.py
app/todo_list/: models.py
kubeComp/: hero-configmap.yaml  hero-pg-secret.yaml  heroes-app.yaml  heroes-pg.yaml
migrations/: env.py
migrations/versions/: 0002_066536152e39_add_quotes_table.py
